--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather Dashboard</title>
 </head>
 <body>
-    
+    <h1>Weather Dashboard</h1>
+    <form id="search-bar">
+        <input id="search-input" type="text" placeholder="Enter a city name">
+        <button type="submit">Search</button>
+    </form>
 </body>
 </html>
