--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
         <input id="search-input" type="text" placeholder="Enter a city name">
         <button type="submit">Search</button>
     </form>
+    <div id="current-weather"></div>
+    <div id="forecast"></div>
+    <script src="script.js"></script>
 </body>
 </html>
