Fixed units of measurement for data coming from API

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <input id="search-input" type="text" placeholder="Enter a city name">
         <button type="submit">Search</button>
     </form>
+    <div id="history"></div>
     <div id="current-weather"></div>
     <div id="forecast"></div>
     <script src="script.js"></script>
