--- a/index.html
+++ b/index.html
@@ -7,14 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Weather Dashboard</h1>
-    <form id="search-bar">
-        <input id="search-input" type="text" placeholder="Enter a city name">
-        <button type="submit">Search</button>
-    </form>
-    <div id="history"></div>
-    <div id="current-weather"></div>
-    <div id="forecast"></div>
+    <div id="container">
+        <div id="search">
+            <h1>Weather Dashboard</h1>
+            <form id="search-bar">
+                <input id="search-input" type="text" placeholder="Enter a city name">
+                <button type="submit">Search</button>
+            </form>
+            <div id="history"></div>  
+        </div>
+        <div id="current-weather-container">
+            <div id="current-weather"></div>
+        </div>
+        <div id="forecast-container">
+            <h2>5-Day Forecast</h2>
+            <div id="forecast"></div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
