--- a/index.html
+++ b/index.html
@@ -7,20 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="container">
-        <div id="search">
-            <h1>Weather Dashboard</h1>
+    <div id="wrapper">
+        <h1>Weather Dashboard</h1>
+        <div id="search-container">
             <form id="search-bar">
                 <input id="search-input" type="text" placeholder="Enter a city name">
                 <button type="submit">Search</button>
+                <button id="clear-history" type="button">Clear History</button>
             </form>
+        </div>
             <div id="history"></div>  
         </div>
-        <div id="current-weather-container">
+        <div id="weather-container">
             <div id="current-weather"></div>
-        </div>
-        <div id="forecast-container">
-            <h2>5-Day Forecast</h2>
             <div id="forecast"></div>
         </div>
     </div>
