Added new CSS and altered JS and HTML file. Application is more responsive and functional

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="wrapper">
+    <div id="left-container">
         <h1>Weather Dashboard</h1>
         <div id="search-container">
             <form id="search-bar">
@@ -18,8 +18,8 @@
         </div>
             <div id="history"></div>  
         </div>
-        <div id="weather-container">
-            <div id="current-weather"></div>
+        <div id="right-container">
+            <div id="today-weather"></div>
             <div id="forecast"></div>
         </div>
     </div>
